# Cipheator

./: .gitignore  CMakeLists.txt  Example.md  LICENSE  README.md  decr.c  gost.c  Пользовательское соглашение.md
admin/: CMakeLists.txt
admin/src/: admin_client.cpp  admin_client.h  admin_window.cpp  admin_window.h  main.cpp
client/: CMakeLists.txt  SECURITY_NOTES.md  resources.qrc
client/src/: cli_main.cpp  client_core.cpp  client_core.h  login_dialog.cpp  login_dialog.h  main.cpp  main_window.cpp  main_window.h  secure_guards.cpp  secure_guards.h
cmake/: DeployQt.cmake  InstallRuntimeDeps.cmake  Packaging.cmake
common/: CMakeLists.txt
common/include/cipheator/: auth.h  base64.h  bytes.h  config.h  crypto.h  gost_cli.h  net.h  pki.h  protocol.h  secure_memory.h  tls.h
common/src/: auth.cpp  base64.cpp  bytes.cpp  config.cpp  crypto.cpp  gost_cli.cpp  net.cpp  pki.cpp  protocol.cpp  secure_memory.cpp  tls.cpp
config/: admin.conf  admin_devices.conf  client.conf  client.conf.in  server.conf
docs/: certificates.md  windows_installer.md
server/: CMakeLists.txt
server/src/: admin_server.cpp  admin_server.h  audit.cpp  audit.h  main.cpp  monitor.cpp  monitor.h
tests/: README.md  bench_k1.py  load_k2.py  protocol_client.py  report.md
